# shape-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: AI_INTEGRATION.md  BRIEFS.md  COMMANDS.md  FAQ.md  MULTI_AGENT.md  PLUGINS.md  QUICKSTART.md  STORAGE.md
examples/plugins/shape-sync-jsonfile-bash/: README.md  shape-sync-jsonfile-bash
examples/plugins/shape-sync-jsonfile-go/: README.md  go.mod  handlers.go  main.go  protocol.go  shape-sync-jsonfile-go  shape-sync.json
examples/plugins/shape-sync-jsonfile-nodejs/: README.md  shape-sync-jsonfile-nodejs
examples/plugins/shape-sync-jsonfile-python/: README.md  shape-sync-jsonfile-python
examples/plugins/shape-sync-jsonfile-ruby/: README.md  shape-sync-jsonfile-ruby
examples/plugins/shape-sync-markdowndir-bash/: README.md  shape-sync-markdowndir-bash
examples/plugins/shape-sync-markdowndir-go/: README.md  (+5 more)
shape-mcp/: README.md  jest.config.js  package-lock.json  package.json
shape-mcp/src/: index.ts  shape.test.ts  shape.ts
src/: lib.rs  main.rs
src/cli/: agent.rs  agent_setup.rs  anchor.rs  app.rs  brief.rs  cache_cmd.rs  compact.rs  context.rs  daemon.rs  merge_driver.rs  mod.rs  output.rs  plugin_cmd.rs  query.rs  sync_cmd.rs  task.rs
src/domain/: anchor.rs  brief.rs  graph.rs  id.rs  merge.rs  mod.rs  task.rs
src/plugin/: anchor_type.rs  brief_type.rs  loader.rs  mod.rs  protocol.rs  shapeup.rs  sync.rs
src/storage/: cache.rs  config.rs  jsonl.rs  markdown.rs  mod.rs  project.rs
tests/: cli_integration.rs  context_golden.rs
(+16 files in other folders)
